Re #2604: ensure unique symbolic anchors
Local functions with anonymous name parts no longer get a symbolic anchor.

--- a/test/LaTeXAndHTML/succeed/Issue1618.html
+++ b/test/LaTeXAndHTML/succeed/Issue1618.html
@@ -88,7 +88,7 @@ The let should be properly aligned in the following code:
       >:</a
       ><a name="231"
       > </a
-      ><a name="232" href="Issue1618.html#B" class="Function"
+      ><a name="232" href="Issue1618.html#277" class="Function"
       >B</a
       ><a name="233"
       > </a
@@ -96,7 +96,7 @@ The let should be properly aligned in the following code:
       >&#8594;</a
       ><a name="235"
       > </a
-      ><a name="236" href="Issue1618.html#B" class="Function"
+      ><a name="236" href="Issue1618.html#277" class="Function"
       >B</a
       ><a name="237"
       >
@@ -140,7 +140,7 @@ The let should be properly aligned in the following code:
       ><a name="272"
       >
     </a
-      ><a name="B" href="Issue1618.html#B" class="Function"
+      ><a name="277" href="Issue1618.html#277" class="Function"
       >B</a
       ><a name="278"
       > </a
@@ -153,7 +153,7 @@ The let should be properly aligned in the following code:
       ><a name="284"
       >
     </a
-      ><a name="289" href="Issue1618.html#B" class="Function"
+      ><a name="289" href="Issue1618.html#277" class="Function"
       >B</a
       ><a name="290"
       > </a
@@ -242,7 +242,7 @@ keyword, as opposed to on a new line.
       >:</a
       ><a name="463"
       > </a
-      ><a name="464" href="Issue1618.html#B" class="Function"
+      ><a name="464" href="Issue1618.html#509" class="Function"
       >B</a
       ><a name="465"
       > </a
@@ -250,7 +250,7 @@ keyword, as opposed to on a new line.
       >&#8594;</a
       ><a name="467"
       > </a
-      ><a name="468" href="Issue1618.html#B" class="Function"
+      ><a name="468" href="Issue1618.html#509" class="Function"
       >B</a
       ><a name="469"
       >
@@ -293,7 +293,7 @@ keyword, as opposed to on a new line.
       >where</a
       ><a name="507"
       >  </a
-      ><a name="B" href="Issue1618.html#B" class="Function"
+      ><a name="509" href="Issue1618.html#509" class="Function"
       >B</a
       ><a name="510"
       > </a
@@ -306,7 +306,7 @@ keyword, as opposed to on a new line.
       ><a name="516"
       >
          </a
-      ><a name="526" href="Issue1618.html#B" class="Function"
+      ><a name="526" href="Issue1618.html#509" class="Function"
       >B</a
       ><a name="527"
       > </a
