--- a/test/LaTeXAndHTML/succeed/PatternSynonyms2.html
+++ b/test/LaTeXAndHTML/succeed/PatternSynonyms2.html
@@ -92,7 +92,7 @@
       >pattern</a
       ><a name="152"
       > </a
-      ><a name="two" href="PatternSynonyms2.html#two" class="InductiveConstructor"
+      ><a name="153" href="PatternSynonyms2.html#153" class="InductiveConstructor"
       >two</a
       ><a name="156"
       >   </a
@@ -121,7 +121,7 @@
       >pattern</a
       ><a name="185"
       > </a
-      ><a name="three" href="PatternSynonyms2.html#three" class="InductiveConstructor"
+      ><a name="186" href="PatternSynonyms2.html#186" class="InductiveConstructor"
       >three</a
       ><a name="191"
       > </a
@@ -133,7 +133,7 @@
       >suc</a
       ><a name="197"
       > </a
-      ><a name="198" href="PatternSynonyms2.html#two" class="InductiveConstructor"
+      ><a name="198" href="PatternSynonyms2.html#153" class="InductiveConstructor"
       >two</a
       ><a name="201"
       >
