--- a/test/LaTeXAndHTML/succeed/Relative-indentation.html
+++ b/test/LaTeXAndHTML/succeed/Relative-indentation.html
@@ -251,7 +251,7 @@ text </a
       >postulate</a
       ><a name="646"
       > </a
-      ><a name="O" href="Relative-indentation.html#O" class="Postulate"
+      ><a name="647" href="Relative-indentation.html#647" class="Postulate"
       >O</a
       ><a name="648"
       > </a
@@ -275,7 +275,7 @@ text </a
       >postulate</a
       ><a name="735"
       > </a
-      ><a name="o" href="Relative-indentation.html#o" class="Postulate"
+      ><a name="736" href="Relative-indentation.html#736" class="Postulate"
       >o</a
       ><a name="737"
       > </a
@@ -283,7 +283,7 @@ text </a
       >:</a
       ><a name="739"
       > </a
-      ><a name="740" href="Relative-indentation.html#O" class="Postulate"
+      ><a name="740" href="Relative-indentation.html#647" class="Postulate"
       >O</a
       ><a name="741"
       >    
@@ -339,7 +339,7 @@ text </a
       ><a name="878"
       >
   </a
-      ><a name="Q" href="Relative-indentation.html#Q" class="Postulate"
+      ><a name="881" href="Relative-indentation.html#881" class="Postulate"
       >Q</a
       ><a name="882"
       > </a
@@ -377,7 +377,7 @@ text </a
       ><a name="947"
       >
           </a
-      ><a name="S" href="Relative-indentation.html#S" class="Postulate"
+      ><a name="958" href="Relative-indentation.html#958" class="Postulate"
       >S</a
       ><a name="959"
       > </a
@@ -421,7 +421,7 @@ text </a
       >postulate</a
       ><a name="1066"
       > </a
-      ><a name="T" href="Relative-indentation.html#T" class="Postulate"
+      ><a name="1067" href="Relative-indentation.html#1067" class="Postulate"
       >T</a
       ><a name="1068"
       > </a
@@ -434,7 +434,7 @@ text </a
       ><a name="1074"
       >
             </a
-      ><a name="U" href="Relative-indentation.html#U" class="Postulate"
+      ><a name="1087" href="Relative-indentation.html#1087" class="Postulate"
       >U</a
       ><a name="1088"
       > </a
@@ -479,7 +479,7 @@ text </a
       >postulate</a
       ><a name="1219"
       > </a
-      ><a name="V" href="Relative-indentation.html#V" class="Postulate"
+      ><a name="1220" href="Relative-indentation.html#1220" class="Postulate"
       >V</a
       ><a name="1221"
       > </a
@@ -492,7 +492,7 @@ text </a
       ><a name="1227"
       >
             </a
-      ><a name="W" href="Relative-indentation.html#W" class="Postulate"
+      ><a name="1240" href="Relative-indentation.html#1240" class="Postulate"
       >W</a
       ><a name="1241"
       > </a
