--- a/test/LaTeXAndHTML/succeed/Trailing-whitespace.html
+++ b/test/LaTeXAndHTML/succeed/Trailing-whitespace.html
@@ -130,7 +130,7 @@
       ><a name="435"
       >
     </a
-      ><a name="C" href="Trailing-whitespace.html#C" class="Postulate"
+      ><a name="440" href="Trailing-whitespace.html#440" class="Postulate"
       >C</a
       ><a name="441"
       > </a
